2011-09-01  Jon Lee  <jonlee@apple.com>

        Adding control rendering at various sizes.

        * projects/forms/survey.html:

2011-08-29  Jon Lee  <jonlee@apple.com>

        Updating forms survey with non-standard wrap for textarea and more data-list driven text fields.

        * projects/forms/survey.html:

2011-08-17  Jon Lee  <jonlee@apple.com>

        Updating the forms survey to include various element sizes.

        * projects/forms/survey.html:

2011-08-16  Daniel Bates  <dbates@webkit.org>

        Add myself to the list of individual members in the WebKit Security Group.

        Rubber-stamped by Eric Seidel.

        * security/security-group-members.html:

2011-08-09  Anders Carlsson  <andersca@apple.com>

        Broken link to LICENSE on contributing code page
        https://bugs.webkit.org/show_bug.cgi?id=65947

        Reviewed by Ryosuke Niwa.

        * coding/contributing.html:

2011-08-04  Dan Bernstein  <mitz@apple.com>

        Fixed a typo.

        * coding/contributing.html:

2011-08-04  Nico Weber  <thakis@chromium.org>

        Update the contributors page to recommend webkit-patch instead of many manual steps
        https://bugs.webkit.org/show_bug.cgi?id=65714

        Reviewed by Adam Barth.

        asvitkine followed the contributing instructions for his first patch, and got
        the ChangeLog entry wrong: https://bugs.webkit.org/show_bug.cgi?id=65707
        webkit-patch prevents errors like this and more.

        * coding/contributing.html:

2011-07-21  Jon Lee  <jonlee@apple.com>

        Create a new survey page that showcases form and interactive elements for quick reference and comparison.
        <rdar://problem/9782965>

        Rubber-stamped by Maciej Stachowiak.

        * projects/forms/image-usemap.png: Added.
        * projects/forms/image1.png: Added.
        * projects/forms/image10.png: Added.
        * projects/forms/image16.png: Added.
        * projects/forms/index.html: Update links