@@ -1,3 +1,15 @@
+2011-09-20  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Generate WebKit team's page out of committers.py
+        https://bugs.webkit.org/show_bug.cgi?id=68045
+
+        Reviewed by Daniel Bates.
+
+        Add the initial implementation of team.html. This page automatically pulls data from committers.py
+        There are no areas of expertise but that'll be added once the bug 68061 is fixed.
+
+        * team.html: Added.
+
 2011-09-01  Jon Lee  <jonlee@apple.com>
 
         Adding control rendering at various sizes.
